--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -12,6 +12,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.GH_PAT }}  # 使用 PAT 进行身份验证
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -25,7 +27,7 @@ jobs:
 
       - name: Generate file navigation
         run: |
-          python .github/generate_navigation.py
+          python generate_navigation.py
 
       - name: Commit and push changes
         run: |
@@ -33,4 +35,4 @@ jobs:
           git config --global user.email "actions@github.com"
           git add README.md
           git commit -m "Automatically update README with latest file navigation"
-          git push
+          git push https://${{ secrets.GH_PAT }}@github.com/${{ github.repository }}.git
